--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,25 @@
 {
-  "name": "vsc-base",
+  "name": "vsc-tauri-app",
   "build": {
     "dockerfile": "Dockerfile"
   },
   "features": {
     "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
   },
+  "forwardPorts": [6080],
+  "portsAttributes": {
+    "6080": {
+      "label": "desktop"
+    }
+  },
   "customizations": {
     "vscode": {
       "extensions": [
         "emeraldwalk.runonsave",
         "ms-azuretools.vscode-containers",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "tauri-apps.tauri-vscode",
+        "rust-lang.rust-analyzer"
       ],
       "settings": {
         "terminal.integrated.defaultProfile.linux": "bash"
@@ -36,7 +44,7 @@
   },
   "runArgs": [
     "--name",
-    "vsc-base",
+    "vsc-tauri-app",
     "--add-host",
     "host.docker.internal:host-gateway"
   ]
