--- a/.gitignore
+++ b/.gitignore
@@ -461,3 +461,7 @@ core.*
 # Claude Code data (keep settings.json, ignore session data)
 .claude/*
 !.claude/settings.json
+
+# Temporary directory
+tmp
+tmp/*
