--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,9 @@
         "cmd": "taplo fmt \"${file}\""
       }
     ]
+  },
+  "[rust]": {
+    "editor.defaultFormatter": "rust-lang.rust-analyzer",
+    "editor.formatOnSave": true
   }
 }
