--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@tauri-apps/plugin-opener": "^2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.6.3",
-    "sql.js": "^1.13.0"
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.11",
