--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,10 +18,22 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.3", features = [] }
 
 [dependencies]
-tauri = { version = "2.3", features = [] }
-tauri-plugin-opener = "2.0"
+tauri = { version = "2.3", features = [], optional = true }
+tauri-plugin-opener = { version = "2.0", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uuid = { version = "1.0", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1.0", features = ["fs", "rt"] }
+log = "0.4"
+env_logger = "0.10"
+rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
+reqwest = { version = "0.11", features = ["json"] }
+refinery = { version = "0.8", features = ["rusqlite"] }
+
+[dev-dependencies]
+tempfile = "3.8"
+
+[features]
+default = ["tauri", "tauri-plugin-opener"]
+test-only = []
